fix some spacing issues in headers

--- a/helli5/static/css/hero.css
+++ b/helli5/static/css/hero.css
@@ -3,7 +3,7 @@
   position: relative;
   color: white;
   min-height: 384px;
-  padding: 1rem 0;
+  padding: 4rem 1rem 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,7 +14,6 @@
   padding: 0;
   min-height: unset;
   height: 576px;
-  max-height: 100vh;
 }
 
 .hero-image {
